Nearly done with the title toolbar except for some spacing issues. Black outlines are for debugging the grid and can be removed.

--- a/gt-athletics/src/app/policy/policy.component.css
+++ b/gt-athletics/src/app/policy/policy.component.css
@@ -1,3 +1,13 @@
+/** FOR DEBUGGING ONLY **/
+
+#border {
+	border: 2px solid black;
+}
+
+/** /FOR DEBUGGING ONLY **/
+
+
+
 /** Navbar **/
 .active {
 	background-color: #262626 !important;
@@ -43,3 +53,24 @@
 	color: white;
 }
 /** /Navbar **/
+
+/** Title Toolbar **/
+
+.title-toolbar ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	top: 0%;
+	width: 100%;
+}
+
+.title-toolbar li {
+	float: right;
+}
+
+.title-toolbar li a {
+	padding: 12px;
+}
+
+/** /Title Toolbar **/
